Update arduino/C++ paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/alex/miniconda3/envs/robot-leg/bin/python"
+    "python.pythonPath": "~/miniconda3/envs/foot-design/bin/python",
+    "arduino.path": "/home/alex/Projects/foot-design-project/Arduino/arduino-1.8.13/"
 }
