Move odrive type stubs to separate repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "height-estimator/lib/BasicLinearAlgebra"]
 	path = height-estimator/lib/BasicLinearAlgebra
 	url = https://github.com/tomstewart89/BasicLinearAlgebra
+[submodule "typesieve"]
+	path = typesieve
+	url = https://github.com/alknemeyer/typesieve
