Ignore generated scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-chris-odrive/
 log.csv
 Arduino/
 Optoforce/
+
 data/raw-opto-log.csv
+data/jump-ball-foot.csv
 data/force-animation.mp4
 data/increasing-hop-height.png
 data/increasing-hop-height.MOV
+
+scripts/controller_generated.py
+
 traj-opt/.ipopt-log.txt
+
 **/.ipynb_checkpoints
 **/__pycache__
