Don't track logged data

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-log.csv
 Arduino/
 Optoforce/
 
@@ -7,6 +6,7 @@ data/jump-ball-foot.csv
 data/force-animation.mp4
 data/increasing-hop-height.png
 data/increasing-hop-height.MOV
+data/leg-data.csv
 
 scripts/controller_generated.py
 
