--- a/environment.yml
+++ b/environment.yml
@@ -106,6 +106,7 @@ dependencies:
     - nose==1.3.7
     - numpy==1.19.2
     - odrive==0.4.12
+    - optoforce==0.2.0
     - parso==0.7.1
     - physical-education==0.1.2
     - pillow==7.2.0
@@ -119,4 +120,3 @@ dependencies:
     - sympy==1.6.2
     - typing-extensions==3.7.4.3
 prefix: /home/alex/miniconda3/envs/foot-design
-
